--- a/src/components/ui/Button/Button.scss
+++ b/src/components/ui/Button/Button.scss
@@ -3,8 +3,10 @@
     background-color: #F6F6F6;
   }
   &-header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     border-radius: 8px;
-    padding: 12px;
     width: 44px;
     height: 44px;
   }
