add card for deals section

--- a/src/assets/styles/fonts.scss
+++ b/src/assets/styles/fonts.scss
@@ -77,3 +77,12 @@
   font-style: normal;
   font-display: swap;
 }
+
+@font-face {
+  font-family: 'Montserrat';
+  src: url('../fonts/Montserrat-ExtraBold.woff2');
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
+}
+
