--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -13,6 +13,7 @@
 
   --font-family-causten: 'Causten', sans-serif;
   --font-family-core-sans-c: 'Core Sans C', sans-serif;
+  --font-family-montserrat: 'Montserrat', sans-serif;
 
   --container-padding-x: 100px;
   --container-width: 1240px;
